src/bpmncwpverify/antlr/CwpParser.py
# Generated from antlr/Cwp.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CwpParser ( Parser ):

    grammarFileName = "Cwp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'stateDiagram-v2'", "'state'", "'as'", 
                     "'[*]'", "'-->'" ]

    symbolicNames = [ "<INVALID>", "STATEDIAGRAM", "STATE", "AS", "START", 
                      "ARROW", "STRING", "ID", "EXPR_CLAUSE", "COMMENT", 
                      "WS", "NEWLINE" ]

    RULE_diagram = 0
    RULE_header = 1
    RULE_statesAndEdges = 2
    RULE_stateDecl = 3
    RULE_edgeTransition = 4
    RULE_startTransition = 5

    ruleNames =  [ "diagram", "header", "statesAndEdges", "stateDecl", "edgeTransition", 
                   "startTransition" ]

    EOF = Token.EOF
    STATEDIAGRAM=1
    STATE=2
    AS=3
    START=4
    ARROW=5
    STRING=6
    ID=7
    EXPR_CLAUSE=8
    COMMENT=9
    WS=10
    NEWLINE=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(CwpParser.HeaderContext,0)


        def startTransition(self):
            return self.getTypedRuleContext(CwpParser.StartTransitionContext,0)


        def EOF(self):
            return self.getToken(CwpParser.EOF, 0)

        def statesAndEdges(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CwpParser.StatesAndEdgesContext)
            else:
                return self.getTypedRuleContext(CwpParser.StatesAndEdgesContext,i)


        def getRuleIndex(self):
            return CwpParser.RULE_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagram" ):
                listener.enterDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagram" ):
                listener.exitDiagram(self)




    def diagram(self):

        localctx = CwpParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.header()
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==7:
                self.state = 13
                self.statesAndEdges()
                self.state = 18
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 19
            self.startTransition()
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==7:
                self.state = 20
                self.statesAndEdges()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(CwpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATEDIAGRAM(self):
            return self.getToken(CwpParser.STATEDIAGRAM, 0)

        def getRuleIndex(self):
            return CwpParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = CwpParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(CwpParser.STATEDIAGRAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesAndEdgesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateDecl(self):
            return self.getTypedRuleContext(CwpParser.StateDeclContext,0)


        def edgeTransition(self):
            return self.getTypedRuleContext(CwpParser.EdgeTransitionContext,0)


        def getRuleIndex(self):
            return CwpParser.RULE_statesAndEdges

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatesAndEdges" ):
                listener.enterStatesAndEdges(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatesAndEdges" ):
                listener.exitStatesAndEdges(self)




    def statesAndEdges(self):

        localctx = CwpParser.StatesAndEdgesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statesAndEdges)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.stateDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.edgeTransition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(CwpParser.STATE, 0)

        def STRING(self):
            return self.getToken(CwpParser.STRING, 0)

        def AS(self):
            return self.getToken(CwpParser.AS, 0)

        def ID(self):
            return self.getToken(CwpParser.ID, 0)

        def getRuleIndex(self):
            return CwpParser.RULE_stateDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateDecl" ):
                listener.enterStateDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateDecl" ):
                listener.exitStateDecl(self)




    def stateDecl(self):

        localctx = CwpParser.StateDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stateDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(CwpParser.STATE)
            self.state = 35
            self.match(CwpParser.STRING)
            self.state = 36
            self.match(CwpParser.AS)
            self.state = 37
            self.match(CwpParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeTransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CwpParser.ID)
            else:
                return self.getToken(CwpParser.ID, i)

        def ARROW(self):
            return self.getToken(CwpParser.ARROW, 0)

        def EXPR_CLAUSE(self):
            return self.getToken(CwpParser.EXPR_CLAUSE, 0)

        def getRuleIndex(self):
            return CwpParser.RULE_edgeTransition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeTransition" ):
                listener.enterEdgeTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeTransition" ):
                listener.exitEdgeTransition(self)




    def edgeTransition(self):

        localctx = CwpParser.EdgeTransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_edgeTransition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(CwpParser.ID)
            self.state = 40
            self.match(CwpParser.ARROW)
            self.state = 41
            self.match(CwpParser.ID)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 42
                self.match(CwpParser.EXPR_CLAUSE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartTransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(CwpParser.START, 0)

        def ARROW(self):
            return self.getToken(CwpParser.ARROW, 0)

        def ID(self):
            return self.getToken(CwpParser.ID, 0)

        def EXPR_CLAUSE(self):
            return self.getToken(CwpParser.EXPR_CLAUSE, 0)

        def getRuleIndex(self):
            return CwpParser.RULE_startTransition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartTransition" ):
                listener.enterStartTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartTransition" ):
                listener.exitStartTransition(self)




    def startTransition(self):

        localctx = CwpParser.StartTransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_startTransition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(CwpParser.START)
            self.state = 46
            self.match(CwpParser.ARROW)
            self.state = 47
            self.match(CwpParser.ID)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 48
                self.match(CwpParser.EXPR_CLAUSE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





